--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -1302,9 +1302,9 @@ Our second normalisation method is independent of the abundance of any amino aci
    q_{i,r}=\frac{{100}\cdot{a_{i,r}}}{a_i}
  \end{equation}
 
-The value  is the total abundance of residues of just amino acid type  in a given alignment of~\gls{tmh}-containing segments (i.e., in the~\gls{tmh} together with its two adjoining flanks summed over all cases of~\gls{tmh}s in the given dataset).
-Peaks in as function of r reveal the preferred positions of residues of type i.
-The difference in   and   normalisation is visualised in Figure~\ref{fig:normalisation}.
+The value $a_i$ is the total abundance of residues of just amino acid type $i$ in a given alignment of~\gls{tmh}-containing segments (i.e., in the~\gls{tmh} together with its two adjoining flanks summed over all cases of~\gls{tmh}s in the given dataset).
+Peaks in $q_{i,r}$ as function of $r$ reveal the preferred positions of residues of type $i$.
+The difference in $q_{i,r}$ and $p_{i,r}$ normalisation is visualised in Figure~\ref{fig:normalisation}.
 
 \begin{figure}[!ht]
 \centering
