--- a/thesis.tex
+++ b/thesis.tex
@@ -24,6 +24,7 @@
 \usepackage{enumerate}
 \usepackage[acronym]{glossaries}
 \usepackage{ragged2e} % allows handling long code lines and words over multiple lines.
+\usepackage{rotating} % allows rotated figures
 
 %Special commands
 \newcommand{\specialcell}[2][c]{%
